# deploy-watcher

./: config.yaml  pyproject.toml
deploy-watcher/: LICENCE  README.md  config.yaml  main.py
deploy-watcher/deploy_watcher/: __init__.py
deploy-watcher/deploy_watcher/.github/workflows/: python-publish.yml
deploy-watcher/utils/: config.py  notifier.py
deploy-watcher/watcher/: github.py  gitlab.py  notifier.py
deploy_watcher/: github.py
deploy_watcher/.github/workflows/: python-publish.yml
